--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,24 +47,14 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_number_of_people"
+    <Spinner
+        android:id="@+id/spinner_number_of_people"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:maxLength="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_total">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tie_num_people"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="Digite o número de pessoas na mesa"
-            android:inputType="numberDecimal" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintTop_toBottomOf="@+id/til_total" />
 
 
     <RadioGroup
@@ -75,9 +65,9 @@
         android:layout_marginStart="16dp"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
-        app:layout_constraintEnd_toEndOf="@+id/til_number_of_people"
-        app:layout_constraintStart_toStartOf="@+id/til_number_of_people"
-        app:layout_constraintTop_toBottomOf="@+id/til_number_of_people">
+        app:layout_constraintEnd_toEndOf="@+id/spinner_number_of_people"
+        app:layout_constraintStart_toStartOf="@id/spinner_number_of_people"
+        app:layout_constraintTop_toBottomOf="@id/spinner_number_of_people">
 
         <RadioButton
             android:id="@+id/rb_option_one"
@@ -109,7 +99,7 @@
         android:text="limpar"
         app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
         app:layout_constraintTop_toBottomOf="@+id/rg_percentage"
-        app:layout_constraintStart_toStartOf="@+id/til_number_of_people"/>
+        app:layout_constraintStart_toStartOf="@id/spinner_number_of_people"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/vertical_guideline"
@@ -126,7 +116,7 @@
         android:layout_marginStart="4dp"
         android:text="Calcular"
         app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
-        app:layout_constraintEnd_toEndOf="@+id/til_number_of_people"
+        app:layout_constraintEnd_toEndOf="@id/spinner_number_of_people"
         app:layout_constraintTop_toBottomOf="@+id/rg_percentage" />
 
     <TextView
