--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Tips Calculator"
+        android:text="@string/app_name"
         style="@style/Title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Preencha os campos abaixo para realizar o calculo da sua conta"
+        android:text="@string/main_subtitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title" />
@@ -33,7 +33,6 @@
         android:layout_width="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_height="wrap_content"
-        android:text="Digite o valor da conta:"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -54,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_height="wrap_content"
-        android:text="Digite o valor da conta:"
+        android:text="@string/hint_table_amount"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -73,7 +72,7 @@
             android:id="@+id/tie_total"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="ex: R$ 100.00"
+            android:hint="@string/table_amount_hint"
             android:inputType="numberDecimal"
             android:maxLength="5"
             android:paddingStart="0dp"
@@ -92,7 +91,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="4dp"
         android:layout_marginBottom="16dp"
-        android:text="limpar"
+        android:text="@string/clean"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
         app:layout_constraintStart_toStartOf="@+id/til_percentage" />
@@ -111,7 +110,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="4dp"
         android:layout_marginBottom="16dp"
-        android:text="Calcular"
+        android:text="@string/calculate"
         app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
         app:layout_constraintEnd_toEndOf="@id/til_percentage"
         app:layout_constraintBottom_toBottomOf="parent" />
@@ -132,7 +131,7 @@
         android:id="@+id/tv_hint_num_people"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Número de pessoas:"
+        android:text="@string/n_mero_de_pessoas"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="@+id/til_total"
         app:layout_constraintTop_toBottomOf="@+id/til_total" />
@@ -153,7 +152,7 @@
             android:id="@+id/tie_num_people"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="ex: 4"
+            android:hint="@string/num_of_people_hint"
             android:inputType="number"
             android:paddingStart="0dp"
             android:textSize="24sp"
@@ -165,7 +164,7 @@
         android:id="@+id/tv_hint_percentage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Porcentagem da gorgeta"
+        android:text="@string/percentage_label"
         android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/til_num_people"
         app:layout_constraintStart_toStartOf="@+id/til_num_people"/>
@@ -185,7 +184,7 @@
             android:id="@+id/tie_percentage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="ex: 10%"
+            android:hint="@string/percentage_tip_hint"
             android:inputType="number"
             android:paddingStart="0dp"
             android:textSize="24sp"
